# T41-SDT-Pi

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  t41_backend.py
backend/src/t41_backend/: __init__.py  events.py  main.py  models.py  panadapter.py
backend/src/t41_backend/radio/: __init__.py  dummy.py  events.py  mchstreamer.py  menu.py  radio.py
frontend/: waterfall.html
